--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.3.4",
+    "react-loader-spinner": "^5.3.4",
+    "react-toastify": "^9.1.2",
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
